fix js and backstretch

--- a/app/assets/stylesheets/marketing.css.scss
+++ b/app/assets/stylesheets/marketing.css.scss
@@ -78,6 +78,7 @@ a.thing_btn:link {
 }
 
 .marketing_header {
+	line-height: 64px;
 	font-weight: 300;
 	margin-top: 15px;
 	font-size: 2.75em;
@@ -216,28 +217,3 @@ h1,h2,h3,h4,h5 {
 	border-radius:4px;
 	padding:50px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
